Priam.err
/usr/share/cassandra/projects/Priam/priam/src/main/java/com/netflix/priam/aws/AWSMembership.java:301: error: cannot find symbol
                        logger.debug("myGetFromPort is: " + mygetFromPort.toString());
                                                            ^
  symbol:   variable mygetFromPort
  location: class AWSMembership
/usr/share/cassandra/projects/Priam/priam/src/main/java/com/netflix/priam/aws/AWSMembership.java:303: error: cannot find symbol
                        logger.debug("myGetToPort is: " + mygetToPort.toString());
                                                          ^
  symbol:   variable mygetToPort
  location: class AWSMembership
/usr/share/cassandra/projects/Priam/priam/src/main/java/com/netflix/priam/aws/AWSMembership.java:305: error: int cannot be dereferenced
                        logger.debug("from is: " + from.toString());
                                                       ^
/usr/share/cassandra/projects/Priam/priam/src/main/java/com/netflix/priam/aws/AWSMembership.java:306: error: int cannot be dereferenced
                        logger.debug("to is: " + to.toString());
                                                   ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':priam:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.
